--- a/tasks/templates/tasks/delete.html
+++ b/tasks/templates/tasks/delete.html
@@ -1,6 +1,38 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<style>
+
+	body{
+		background-color: #638CB8;
+	}
+
+	input{
+		width: 100%;
+		padding: 12px 20px;
+		margin: 8px 0;
+		box-sizing: border-box;
+	}
+
+	
+
+	.submit{
+		background-color: #6BA3E8;
+	}
+    p{
+		font-size: 14pt;
+		font-family:Sans-serif;
+		color:black;
+	}
+	
+    .btn-danger{
+		background-color: #ffae19;
+		border-color: #e59400;
+	}
+
+</style>
 <p>Are you sure you want to delete "{{item}}"?</p>
 
-<a href="{% url 'list' %}" >Cancel</a>
+<a class="btn btn-sm btn-danger" href="{% url 'list' %}" >Cancel</a>
 
 <form method="POST" action="">
 	{% csrf_token %}
