--- a/todo list using react/todolist/src/index.css
+++ b/todo list using react/todolist/src/index.css
@@ -1,3 +1,6 @@
+body{
+  background-color: hsl(0, 0%, 10%);
+}
 .to-do-list{
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
@@ -5,6 +8,7 @@
 }
 h1{
   font-size: 4rem;
+  color: white;
 }
 button{
   font-size: 1.7rem;
@@ -37,5 +41,30 @@ button{
 input[type='text']{
   font-size: 1.6rem;
   padding: 10px;
-  border: 2px solid black;
+  border: 2px solid hsla(0, 0%, 80%,0.5);
+  border-radius: 5px;
+  color: hsla(0, 0%, 0%,0.5);
+}
+ol{
+  padding: 0;
+}
+li{
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 15px;
+  background-color: hsl(0, 0%, 90%);
+  margin-bottom: 10px;
+  border: 3px solid hsla(0, 0%, 85%,0.75);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+.text{
+  flex: 1;
+
+}
+.delete-button,.move-button{
+  padding: 8pc 12pc;
+  font-size: 1.4rem;
+  margin-left: 10px;
 }
